# Sway-pad

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  Dockerfile  README.md  class SwayEditor.md  class SwayEditor.txt  config.toml  key.py  new_file.py  pyproject.toml  setup.py  sway.py
.github/workflows/: python-app.yml
docs/: CONTRIBUTORS.md  class SwayEditor.md  usage.md
examples/: config.example.toml
packaging/debian/: control  rules
packaging/freebsd/: Makefile
packaging/rpm/: sway-pad.spec
packaging/windows/: build.bat
sway_pad/: __init__.py  ai_client.py  config.toml  install_devops_linters.py  install_devops_linters.sh  lint_devops.py  lsp_client.py  sway.py  ui_panels.py
tests/: requirements.txt  test_sway.py
