[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sway-pad"
version = "0.1.0"
description = "Advanced text editor with syntax highlighting and multithreading"
authors = [
    { name="Siergej Sobolewski", email="s.sobolewski@hotmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "pygments>=2.13.0",
    "toml>=0.10.2",
    "pylint>=3.0.0",
    "curses>=2.2.1"
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD :: FreeBSD"
]
